; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_cleanup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/spi/extr_pxa2xx_spi.c_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_device = type { i32 }
%struct.chip_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spi_device*)* @cleanup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cleanup(%struct.spi_device* %0) #0 {
  %2 = alloca %struct.spi_device*, align 8
  %3 = alloca %struct.chip_data*, align 8
  store %struct.spi_device* %0, %struct.spi_device** %2, align 8
  %4 = load %struct.spi_device*, %struct.spi_device** %2, align 8
  %5 = call %struct.chip_data* @spi_get_ctldata(%struct.spi_device* %4)
  store %struct.chip_data* %5, %struct.chip_data** %3, align 8
  %6 = load %struct.chip_data*, %struct.chip_data** %3, align 8
  %7 = icmp ne %struct.chip_data* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %23

9:                                                ; preds = %1
  %10 = load %struct.chip_data*, %struct.chip_data** %3, align 8
  %11 = getelementptr inbounds %struct.chip_data, %struct.chip_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @gpio_is_valid(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %20

15:                                               ; preds = %9
  %16 = load %struct.chip_data*, %struct.chip_data** %3, align 8
  %17 = getelementptr inbounds %struct.chip_data, %struct.chip_data* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @gpio_free(i32 %18)
  br label %20

20:                                               ; preds = %15, %9
  %21 = load %struct.chip_data*, %struct.chip_data** %3, align 8
  %22 = call i32 @kfree(%struct.chip_data* %21)
  br label %23

23:                                               ; preds = %20, %8
  ret void
}

declare dso_local %struct.chip_data* @spi_get_ctldata(%struct.spi_device*) #1

declare dso_local i64 @gpio_is_valid(i32) #1

declare dso_local i32 @gpio_free(i32) #1

declare dso_local i32 @kfree(%struct.chip_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
